--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Lype</title>
+  <title>Lype | <%= yield(:title) %></title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-<%= yield %>
+	<!-- header -->
+	<!-- end header -->
+
+	<!-- body -->
+	<%= yield %>
+	<!-- end body -->
+
+	<!-- footer -->
+	<!-- end footer -->
 
 </body>
 </html>
