--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -1,3 +1,62 @@
 // Place all the styles related to the static_pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+/*  VARIABLES & DEFINITIONS */
+$MAINGREEN: #4AA147;
+$LIGHTGREEN: #95C087;
+
+
+
+/* UNIVERSAL */
+html {
+	height: 100%;
+}
+
+body {
+	margin: 0;
+	font-family: Arial, Helvetica, sans-serif
+}
+
+.container {
+	width: 960px;
+	margin: 0 auto;
+}
+
+
+
+/* HEADER */
+header {
+	width: 100%;
+	height: 60px;
+	border-bottom: 5px solid $MAINGREEN;
+}
+
+.logo {
+	width: 160px;
+	height: 56px;
+	display: inline-block;
+}
+
+nav {
+	display: inline-block;
+	float: right;
+	margin-top: 15px;
+
+	ul {
+		list-style-type: none;
+
+		li {
+			float: left;
+			margin-left: 30px;
+			color: #888;
+		}
+	}
+}
+
+.signup-btn {
+	color: #fff;
+	background-color: $MAINGREEN;
+	padding: 50px 5px 5px 5px;
+	margin: -50px 0 0 100px;
+}
