--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,6 @@
 <% provide(:title, 'Home') %>
 
-<h1>StaticPages#Home</h1>
-<p>Add content here</p>
+<div class="container">
+	<h1>What is LYPE?</h1>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eget faucibus tellus, sit amet gravida elit. Vivamus rutrum vestibulum odio vestibulum luctus. Etiam ornare faucibus turpis sed vehicula. Donec vitae mauris luctus, lacinia enim eget, gravida ligula. Aenean laoreet enim tortor, eu varius libero porta ac. Vivamus interdum, eros nec ullamcorper viverra, felis mi vehicula orci, sed tristique risus magna eget metus. Quisque fringilla lorem et lectus adipiscing tempor. Donec id condimentum nulla, aliquam pharetra felis. Fusce placerat tempus mauris, et rhoncus erat.</p>
+</div>
