--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -91,6 +91,36 @@ h1 {
 
 p {
 	color: $MEDIUMGRAY;
+	margin-left: 10px;
+}
+
+.banner {
+	background-image: url('banner-1.jpg');
+	height: 356px;
+	width: 100%;
+	position: relative;
+}
+
+.action-bar {
+	height: 50px;
+	width: 100%;
+	background-color: $MAINGREEN;
+	position: absolute;
+	bottom: 0;
+
+	div {
+		display: inline-block;
+		width: 317px;
+		height: 100%;
+		color: #fff;
+		font-size: 18px;
+		line-height: 50px;
+		text-align: center;
+
+		&:hover {
+			background-color: $LIGHTGREEN;
+		}
+	}
 }
 
 
