--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
 
 		<nav>
 			<ul>
-				<li>Learn More</li>
+				<li><%= link_to 'Learn More', about_path %></li>
 				<li>Contact</li>
 				<li>FAQs</li>
 				<li class="signup-btn">Sign Up</li>
