Add Bootstrap libraries and update about page

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -4,4 +4,21 @@
 	<h1>Start Your Fundraising Event Today!</h1>
 	<p>Choose from one of the three options below to help you raise money for your fundraising events. With LYPE, you will have the tools necessary to reach your goal! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non lacus faucibus, vulputate libero mattis, ultrices mi. Quisque dictum enim id tortor scelerisque scelerisque. Aliquam pharetra nisi sed orci dignissim, ac tincidunt nibh venenatis. Vestibulum facilisis dapibus felis non pharetra.</p>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus semper tortor eu magna volutpat, ac tincidunt quam porttitor. Vivamus mattis ultricies magna, vel ultrices nisi sodales sit amet. Mauris auctor a urna convallis euismod. In hac habitasse platea dictumst. Maecenas a interdum libero. Nunc nunc neque, laoreet ultrices leo ac, tempus venenatis mi. Ut tincidunt lacus metus, sodales mattis libero sollicitudin in. Sed dignissim tincidunt augue. Mauris vitae diam purus. Morbi placerat mauris ut feugiat dignissim. Sed scelerisque pretium sem quis commodo. Nulla viverra dolor sed lacus auctor, tincidunt pulvinar purus tempor. Nulla ac eros a enim fermentum scelerisque. Nullam vel tellus et arcu dignissim placerat.</p>
-</div>
+</div> <!-- end .container -->
+
+<div class="features-section">
+</div> <!-- end .features-section -->
+
+<div class="container">
+	<h1>Do It Yourself - 4%</h1>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus semper tortor eu magna volutpat, ac tincidunt quam porttitor. Vivamus mattis ultricies magna, vel ultrices nisi sodales sit amet. Mauris auctor a urna convallis euismod. In hac habitasse platea dictumst. Maecenas a interdum libero. Nunc nunc neque, laoreet ultrices leo ac, tempus venenatis mi. Ut tincidunt lacus metus, sodales mattis libero sollicitudin in. Sed dignissim tincidunt augue. Mauris vitae diam purus. Morbi placerat mauris ut feugiat dignissim. Sed scelerisque pretium sem quis commodo. Nulla viverra dolor sed lacus auctor, tincidunt pulvinar purus tempor. Nulla ac eros a enim fermentum scelerisque. Nullam vel tellus et arcu dignissim placerat.</p>
+	<a href="#" class="btn btn-small">Sign up now!</a>
+
+	<h1>Use Our Templates - 8%</h1>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus semper tortor eu magna volutpat, ac tincidunt quam porttitor. Vivamus mattis ultricies magna, vel ultrices nisi sodales sit amet. Mauris auctor a urna convallis euismod. In hac habitasse platea dictumst. Maecenas a interdum libero. Nunc nunc neque, laoreet ultrices leo ac, tempus venenatis mi. Ut tincidunt lacus metus, sodales mattis libero sollicitudin in. Sed dignissim tincidunt augue. Mauris vitae diam purus. Morbi placerat mauris ut feugiat dignissim. Sed scelerisque pretium sem quis commodo. Nulla viverra dolor sed lacus auctor, tincidunt pulvinar purus tempor. Nulla ac eros a enim fermentum scelerisque. Nullam vel tellus et arcu dignissim placerat.</p>
+	<a href="#" class="btn btn-small">Sign up now!</a>
+
+	<h1>We Do Everything - 15%</h1>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus semper tortor eu magna volutpat, ac tincidunt quam porttitor. Vivamus mattis ultricies magna, vel ultrices nisi sodales sit amet. Mauris auctor a urna convallis euismod. In hac habitasse platea dictumst. Maecenas a interdum libero. Nunc nunc neque, laoreet ultrices leo ac, tempus venenatis mi. Ut tincidunt lacus metus, sodales mattis libero sollicitudin in. Sed dignissim tincidunt augue. Mauris vitae diam purus. Morbi placerat mauris ut feugiat dignissim. Sed scelerisque pretium sem quis commodo. Nulla viverra dolor sed lacus auctor, tincidunt pulvinar purus tempor. Nulla ac eros a enim fermentum scelerisque. Nullam vel tellus et arcu dignissim placerat.</p>
+	<a href="#" class="btn btn-small">Sign up now!</a>
+</div> <!-- end. container -->
