--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -2,7 +2,11 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+@import "bootstrap";
+
+/*==========================*/
 /*  VARIABLES & DEFINITIONS */
+/*==========================*/
 $LIGHTGREEN: #95C087;
 $MAINGREEN: #4AA147;
 
@@ -142,6 +146,14 @@ p {
 			background-color: $LIGHTGREEN;
 		}
 	}
+}
+
+.features-section {
+	width: 100%;
+	height: 500px;
+	background-color: $LIGHTGRAY;
+	border-top: 1px solid $MEDIUMGRAY;
+	border-bottom: 1px solid $MEDIUMGRAY;
 }
 
 
