--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -69,7 +69,7 @@ header {
 nav {
 	display: inline-block;
 	float: right;
-	margin-top: 15px;
+	margin-top: 25px;
 
 	ul {
 		list-style-type: none;
@@ -156,6 +156,10 @@ p {
 	border-bottom: 1px solid $MEDIUMGRAY;
 }
 
+.btn {
+	color: $MEDIUMGRAY;
+}
+
 
 
 /*========*/
@@ -177,8 +181,7 @@ footer {
 		display: inline-block;
 		list-style-type: none;
 		float: left;
-		padding: 0;
-		margin-right: 50px;
+		margin: 15px 50px 0 0;
 
 		li {
 			margin-bottom: 10px;
