--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
 			<ul>
 				<li><%= link_to 'Learn More', about_path %></li>
 				<li>Contact</li>
-				<li>FAQs</li>
+				<li><%= link_to 'FAQs', faq_path %></li>
 				<li class="signup-btn">Sign Up</li>
 				<li>Log In</li>
 			</ul>
