--- a/app/views/static_pages/faq.html.erb
+++ b/app/views/static_pages/faq.html.erb
@@ -4,16 +4,65 @@
 	<h1>Frequently Asked Questions</h1>
 
 	<div class="qa-section">
+		<div class="q-box">
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit?</p>
+		</div> <!-- end .q-box -->
+		<div class="a-box">
+			<p>In condimentum libero vitae pulvinar molestie. Quisque rutrum tellus sed lacus vehicula tincidunt a vitae nunc. Suspendisse pretium accumsan euismod. Vestibulum tempor leo justo, vel dignissim eros suscipit eget. Nulla sed felis id erat varius mattis ut et urna. Mauris molestie non felis quis condimentum. Ut fermentum nulla vitae tortor feugiat viverra.</p>
+		</div> <!-- end .a-box -->
+		<div class="clear-float"></div>
+	</div> <!-- end .qa-section -->
 
+	<div class="qa-section">
+		<div class="q-box">
+			<p>Donec cursus dui vitae lectus ullamcorper convallis?</p>
+		</div> <!-- end .q-box -->
+		<div class="a-box">
+			<p>Donec facilisis dolor metus, feugiat laoreet ipsum adipiscing vitae. Nullam vel enim sed ligula hendrerit fringilla. Ut a velit id neque rutrum porttitor. Morbi lacinia, felis ut rhoncus viverra, est est posuere turpis, quis tincidunt nibh orci ut elit. Aliquam facilisis ultrices felis porta volutpat. Phasellus bibendum turpis vel suscipit vulputate. Nunc at posuere tortor. Curabitur ac eros vel mauris aliquet pharetra. Curabitur faucibus pharetra nisl, dictum posuere magna euismod vel. Vestibulum sed tincidunt sapien, eu feugiat nisl. Nullam ultricies ipsum dapibus leo lacinia, eget laoreet tortor varius. Nunc luctus ultrices eros, in fringilla ante lobortis eu. Fusce sit amet massa ac mi adipiscing venenatis vitae a mi. Cras pharetra, nisi in iaculis ornare, augue urna dapibus nisi, nec euismod massa libero interdum libero.</p>
+		</div> <!-- end .a-box -->
+		<div class="clear-float"></div>
+	</div> <!-- end .qa-section -->
+
+	<div class="qa-section">
+		<div class="q-box">
+			<p>Quisque id justo posuere, consectetur mi vel, viverra magna?</p>
+		</div> <!-- end .q-box -->
+		<div class="a-box">
+			<p>Duis a mauris eget leo vestibulum sodales id non augue. Phasellus dapibus vestibulum nibh, sed blandit neque egestas vitae. Duis ultricies nulla ac risus condimentum bibendum. Vestibulum aliquet tincidunt mi, eu placerat velit porta in. Nulla facilisi. Nam mollis lorem mi, vitae fermentum mi fringilla ac. Pellentesque id neque eget erat sodales fermentum. Morbi placerat orci vitae tellus condimentum, sit amet suscipit purus posuere. In hac habitasse platea dictumst. Vivamus tristique hendrerit commodo.</p>
+		</div> <!-- end .a-box -->
+		<div class="clear-float"></div>
+	</div> <!-- end .qa-section -->
+
+	<div class="qa-section">
+		<div class="q-box">
+			<p>Suspendisse potenti?</p>
+		</div> <!-- end .q-box -->
+		<div class="a-box">
+			<p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed sodales dolor nec sodales venenatis. Fusce vitae turpis non dui tincidunt aliquam sed id nulla. Morbi molestie lectus et convallis rhoncus. In hac habitasse platea dictumst. Praesent mauris magna, gravida in tellus nec, eleifend tristique turpis. Mauris sollicitudin adipiscing luctus.</p>
+		</div> <!-- end .a-box -->
+		<div class="clear-float"></div>
+	</div> <!-- end .qa-section -->
+
+	<div class="qa-section">
+		<div class="q-box">
+			<p>Fusce nibh urna, elementum a ornare sit amet, venenatis eu lorem?</p>
+		</div> <!-- end .q-box -->
+		<div class="a-box">
+			<p>Donec urna diam, pretium convallis urna quis, fringilla dignissim mi. Aenean at molestie ligula. Ut consectetur nisl vitae diam sodales, consequat convallis felis pellentesque. Fusce fringilla posuere eleifend. Donec nec mauris varius, venenatis nulla eget, interdum magna. Cras malesuada felis eros, eget semper magna tincidunt eget. Vivamus in sapien in justo convallis ullamcorper ac eget diam. Cras id neque eleifend, placerat quam nec, sollicitudin est. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Duis in orci consequat, semper metus at, auctor nunc.</p>
+		</div> <!-- end .a-box -->
+		<div class="clear-float"></div>
+	</div> <!-- end .qa-section -->
+
+	<div class="qa-section">
 		<div class="q-box">
 			<p>What is the answer to life and the universe?</p>
 		</div> <!-- end .q-box -->
-
 		<div class="a-box">
 			<p>42.</p>
 		</div> <!-- end .a-box -->
-
 	</div> <!-- end .qa-section -->
+	<div class="clear-float"></div>
+
 </div> <!-- end .container -->
 
 <br><br>
